WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106383
ScrollingCoordinator touch event hit rects aren't converted to proper coordinates when in nested views
https://bugs.webkit.org/show_bug.cgi?id=106383
Summary
ScrollingCoordinator touch event hit rects aren't converted to proper coordin...
Levi Weintraub
Reported
2013-01-08 14:28:00 PST
We need to rects from nested views through convertToContainingView.
Attachments
Patch
(6.47 KB, patch)
2013-01-08 14:48 PST
,
Levi Weintraub
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Levi Weintraub
Comment 1
2013-01-08 14:48:05 PST
Created
attachment 181771
[details]
Patch
James Robinson
Comment 2
2013-01-09 21:58:18 PST
Comment on
attachment 181771
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=181771&action=review
> Source/WebCore/page/scrolling/ScrollingCoordinator.cpp:188 > + if (!r.isEmpty()) {
whole lotta' indentation here. can we get some early returns?
Levi Weintraub
Comment 3
2013-01-10 10:07:43 PST
Comment on
attachment 181771
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=181771&action=review
>> Source/WebCore/page/scrolling/ScrollingCoordinator.cpp:188 >> + if (!r.isEmpty()) { > > whole lotta' indentation here. can we get some early returns?
Good point. Done.
Levi Weintraub
Comment 4
2013-01-10 11:42:04 PST
Committed in
http://trac.webkit.org/changeset/139346
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug