ScrollingCoordinator touch event hit rects aren't converted to proper coordinates when in nested views https://bugs.webkit.org/show_bug.cgi?id=106383

Reviewed by James Robinson.

Source/WebCore:

ScrollingCoordinator uses clippedOverflowRectForRepaint(0) to generate the bounds for a renderer's hit
testing rect. The rect this returns is in the coordinates of its document. This change converts the
rect to the outermost view's coordinate system using convertToContainingView.

Tests: platform/chromium/fast/events/touch/touch-hit-rects-in-iframe.html

* page/scrolling/ScrollingCoordinator.cpp:
(WebCore::accumulateRendererTouchEventTargetRects):

LayoutTests:

* platform/chromium/fast/events/touch/resources: Added.
* platform/chromium/fast/events/touch/resources/frame-with-touch-handler.html: Added.
* platform/chromium/fast/events/touch/touch-hit-rects-in-iframe-expected.txt: Added.
* platform/chromium/fast/events/touch/touch-hit-rects-in-iframe.html: Added.


Canonical link: https://commits.webkit.org/124791@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139346 268f45cc-cd09-0410-ab3c-d52691b4dbfc